# opalescent

./: .gitignore  AGENTS.md  ARRAY_FEATURES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ERROR_HANDLING_STANDARDS.md  FIXES.txt  GAME_OF_LIFE_MEMORY_LEAK_FINDINGS.md  GAME_OF_LIFE_POST_MORTEM.md  HOT_RELOAD_ARCHITECTURE.md  INTEGRATION_DEPENDENCIES.md  Makefile.toml  OPALESCENT_CRASH_COURSE.md  PLAN.md  README.md  REFACTORING_GUIDE.md  REFACTORING_STATUS.md  SCALABILITY_ISSUES.md  SECURITY.md  STDLIB.md  WINDOWS_ISSUES.md  libintegration_e2e.rlib  test_interpolation.rs
.github/: pull_request_template.md
.sisyphus/: boulder.json  old-main.op
error-handler-proposals/: COMPARISON.md
game-of-life-proposals/: COMPARISON.md
language-spec/: array_helpers.op  error_handling_samples.op  fib_iterative.op  fib_recursive.op  hello_world.op  partition.op  simple_quiz.op  types_example.types.op  types_usage_example.op  unique_adjacent_sorted.op
memory-model-proposals/: COMPARISON.md
plan/: bytes-stdlib-integration-plan.md  bytes-type-plan.md  function-system-plan.md  function-type-parsing-plan.md  generic-type-parsing-plan.md  lexer-plan.md  parser-foundation-plan.md  phase-2-blockers-plan.md  string-interpolation-plan.md  type-declaration-plan.md  type-system-core-plan.md
runtime/: opal_bytes.c  opal_error.c  opal_fs.c  opal_fs_errors.h  opal_io.c  opal_msvc_link_probe.c  opal_parse.c  opal_portability.h  opal_print.c  opal_rc.c  opal_rc.h  opal_rng.c  opal_runtime.c  opal_runtime.h  opal_string.c
scripts/: array_memory_sanitizer.sh  check-line-count.ps1  (+3 more)
(+1907 files in other folders)
