[package]
name = "opalescent"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
unicode-xid = "0.2"
inkwell = { version = "0.8.0", features = ["llvm14-0", "llvm14-0-prefer-dynamic"] }
libloading = "0.8"

[features]
integration = []

[lib]
name = "opalescent"
path = "src/lib.rs"

[[bin]]
name = "opalescent"
path = "src/main.rs"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
