[package]
name = "opalescent"
version = "0.1.0"
edition = "2024"

[dependencies]
miette = { version = "7.0", features = ["fancy"] }
thiserror = "1.0"
unicode-xid = "0.2"
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
inkwell = { version = "0.8.0", features = ["llvm14-0"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(not(windows))'.dependencies]
inkwell = { version = "0.8.0", features = ["llvm14-0"] }
llvm-sys-140 = { package = "llvm-sys", version = "140.1.3", features = ["prefer-dynamic"] }

[features]
integration = []
panic_mid_run = []
windows-wine = []

[lib]
name = "opalescent"
path = "src/lib.rs"

[[bin]]
name = "opalescent"
path = "src/main.rs"

[dev-dependencies]
proptest = "1.4"
serial_test = "3"
sha2 = "0.10"
tempfile = "3.8"
